*Empty MediaWiki Message*

--- a/Tadayṛa_n_At_Wertilan.mw
+++ b/Tadayṛa_n_At_Wertilan.mw
@@ -2,4 +2,4 @@
 '''At Wertilan''' d [[asun]] i d-yezgan deg tama ufella n [[agezdu|ugezdu]] n [[Sṭif]]. Imezdaɣ-is akk d [[Iqbayliyen]]
 
 == Anezwu == 
-""At Wertilan"" tetwasen s usemmiḍ yal [[tagrest]] anda [[Taseddart|tiseddarin]]  n [[Tignewt|wezɣal]] ttawaḍent alma d 10 ddaw n [[amya|umya]] (-10) rnu fellas [[agris]] d w[[adfel]].
+""At Wertilan"" tetwasen s usemmiḍ yal [[tagrest]] anda [[Taseddart|tiseddarin]]  n [[Tignewt|wezɣal]] ttawaḍent alma d 10 ddaw n [[amya|umya]] (-10) rnu fellas [[agris]], [[aqerrif]] yakk d w[[adfel]].
