*Empty MediaWiki Message*

--- a/Tadayṛa_n_At_Wertilan.mw
+++ b/Tadayṛa_n_At_Wertilan.mw
@@ -1,5 +1,12 @@
 {{Infobox city}}
 '''At Wertilan''' d [[asun]] i d-yezgan deg tama ufella n [[agezdu|ugezdu]] n [[Sṭif]]. Imezdaɣ-is akk d [[Iqbayliyen]]
 
+== Tiɣiwanin ==
+At Wertiran d [[asun]] yessegrawen gar 4 n [[taɣiwant|tɣiwanin]]:
+* [[At Wertiran]]
+* [[Tala ulegraj]]
+* [[At Cebana]]
+* [[At Muḥli]] 
+
 == Anezwu == 
 ""At Wertilan"" tetwasen s usemmiḍ yal [[tagrest]] anda [[Taseddart|tiseddarin]]  n [[Tignewt|wezɣal]] ttawaḍent alma d 10 ddaw n [[amya|umya]] (-10) rnu fellas [[agris]], [[aqerrif]] yakk d w[[adfel]].
