*Empty MediaWiki Message*

--- a/Tadayṛa_n_At_Wertilan.mw
+++ b/Tadayṛa_n_At_Wertilan.mw
@@ -10,3 +10,9 @@ At Wertiran d [[asun]] yessegrawen gar 4 n [[taɣiwant|tɣiwanin]]:
 
 == Anezwu == 
 ""At Wertilan"" tetwasen s usemmiḍ yal [[tagrest]] anda [[Taseddart|tiseddarin]]  n [[Tignewt|wezɣal]] ttawaḍent alma d 10 ddaw n [[amya|umya]] (-10) rnu fellas [[agris]], [[aqerrif]] yakk d w[[adfel]].
+
+== Imezdaɣ ==
+
+== Amezruy ==
+
+== Ẓeṛ daɣen ==
