*Empty MediaWiki Message*

--- a/Tadayṛa_n_At_Wertilan.mw
+++ b/Tadayṛa_n_At_Wertilan.mw
@@ -9,7 +9,7 @@ At Wertiran d [[asun]] yessegrawen gar 4 n [[taɣiwant|tɣiwanin]]:
 * [[At Muḥli]] 
 
 == Anezwu == 
-""At Wertilan"" tetwasen s usemmiḍ yal [[tagrest]] anda [[Taseddart|tiseddarin]]  n [[Tignewt|wezɣal]] ttawaḍent alma d 10 ddaw n [[amya|umya]] (-10) rnu fellas [[agris]], [[aqerrif]] yakk d w[[adfel]].
+At Wertilan tetwasen s usemmiḍ yal [[tagrest]] anda [[Taseddart|tiseddarin]]  n [[Tignewt|wezɣal]] ttawaḍent alma d 10 ddaw n [[amya|umya]] (-10) rnu fellas [[agris]], [[aqerrif]] yakk d w[[adfel]].
 
 == Imezdaɣ ==
 
