*Empty MediaWiki Message*

--- a/Azuk.mw
+++ b/Azuk.mw
@@ -1,1 +1,12 @@
-'''Azuk''' d tadusi n [[taldayt|teldayt]] n tmert (lqaɛa) i tɣawsiwin, daɣen d [[tarrayt]] i weẓlay n kra n [[ayafu|iyufa]]
+'''Azuk''' d tadusi n [[taldayt|teldayt]] n tmert (lqaɛa) i tɣawsiwin, daɣen d [[tarrayt]] i weẓlay n kra n [[tanga|tenga]]
+
+== Asiden n wazuk deg tusnakt ==
+
+== [[Tigget]] n [[akat|wakat]] n wazuk ==
+
+== Imedyaten ==
+
+== Ẓeṛ daɣen ==
+
+
+[[Taggayt:Tiggtin n wakat]]
