*Empty MediaWiki Message*

--- a/Taldayt.mw
+++ b/Taldayt.mw
@@ -1,1 +1,7 @@
 '''Taldayt''' d ayen yakk yettaǧǧan tiɣawsiwin ad lint (ad sɛunt) [[azuk]] i wakken ad ddunt ar wammas anda id tekker teldayt
+
+== Taɣult n teldayt ==
+
+== Amezruy n teẓri n teldayt ==
+
+== Ẓeṛ daɣen ==
