*Empty MediaWiki Message*

--- a/Aɣraz.mw
+++ b/Aɣraz.mw
@@ -1,1 +1,16 @@
-.
+{{Automatic taxobox}}
+'''Aɣraz''' ([[Assaɣ ussnan]]: '''Thymelaea''') d [[tawsit (tudersent)|tawsit]] n [[imɣan|yimɣan]]  [[tamdikt|imidken]] [[ameɣlal n tizzegzut|imeɣlalin n tizzegzut]] d [[imɣan isaɣuren|isaɣuren]] ilan (yesɛan) azal n 30 n [[talmest|telmas]]. Tawsit-a d tin yeṭṭafaren [[tawacult (tasnudert)|tawacult]] [[taneɣrazt]]
+
+Ijeǧǧigen n telmas-is gan d iwraɣen neɣ d izegza 
+
+== Umuɣ n telmas ==
+* [[Aɣraz imsetɣen]] (''Thymelaea hirsuta'')
+
+== Asexdem ==
+
+== Ẓeṛ daɣen ==
+
+[[Taggayt:Tineɣrazin]]
+[[Taggayt:Tiwsitin n yimɣan]]
+[[Taggayt:imɣan]]
+[[Taggayt:Timejjirin]]
