--- a/Aɣraz.mw
+++ b/Aɣraz.mw
@@ -14,3 +14,4 @@ Ijeǧǧigen n telmas-is gan d iwraɣen neɣ d izegza
 [[Taggayt:Tiwsitin n yimɣan]]
 [[Taggayt:imɣan]]
 [[Taggayt:Timejjirin]]
+[[Taggayt:Tiɣrazin]]
