*Empty MediaWiki Message*

--- a/Aɣraz.mw
+++ b/Aɣraz.mw
@@ -1,5 +1,5 @@
 {{Automatic taxobox}}
-'''Aɣraz''' ([[Assaɣ ussnan]]: '''Thymelaea''') d [[tawsit (tudersent)|tawsit]] n [[imɣan|yimɣan]]  [[tamdikt|imidken]] [[ameɣlal n tizzegzut|imeɣlalin n tizzegzut]] d [[imɣan isaɣuren|isaɣuren]] ilan (yesɛan) azal n 30 n [[talmest|telmas]]. Tawsit-a d tin yeṭṭafaren [[tawacult (tasnudert)|tawacult]] [[taneɣrazt]]
+'''Aɣraz''' ([[Assaɣ ussnan]]: '''Thymelaea''') d [[tawsit (tudersent)|tawsit]] n [[imɣan|yimɣan]]  [[tamdikt|imidken]] [[ameɣlal n tizzegzut|imeɣlalin n tizzegzut]] d [[imɣi asaɣur|isaɣuren]] ilan (yesɛan) azal n 30 n [[talmest|telmas]]. Tawsit-a d tin yeṭṭafaren [[tawacult (tasnudert)|tawacult]] [[taneɣrazt]]
 
 Ijeǧǧigen n telmas-is gan d iwraɣen neɣ d izegza 
 
