--- a/Ikfil.mw
+++ b/Ikfil.mw
@@ -2,7 +2,7 @@
 '''Ikfil''' neɣ '''Akfal''' ([[Assaɣ ussnan]]: '''Drimia''') d [[tawsit (tudersent)|tawsit]] n [[imɣan|yimɣan]] yeṭṭafaren [[tawacult (tasnudert)|tawacult]] n [[Tasisant|tsisant]] s unect n [[Asismel n Linné|usismel aklasik]], neɣ [[tizikemt]] s unect n [[Asismel n temhazɣert|usismel amhazɣer]] 
 
 == Ismawen n iden s Tmaziɣt ==
-Ikfil d [[imɣ]] ilan (yesɛan) aṭas n yismawen s [[Tutlayin timaziɣin|Tmaziɣt]], gar-asen: '''Akfal''', '''Icfil''', '''Taflalit''', '''Timezrit''', '''Amẓelli''' 
+Ikfil d [[imɣi]] ilan (yesɛan) aṭas n yismawen s [[Tutlayin timaziɣin|Tmaziɣt]], gar-asen: '''Akfal''', '''Icfil''', '''Taflalit''', '''Timezrit''', '''Amẓelli'''
 
 == Umuɣ n telmas ==
 * [[Aẓalim wuccen]] — (''Drimia maritima'') 
