*Empty MediaWiki Message*

--- a/Aẓalim_wuccen.mw
+++ b/Aẓalim_wuccen.mw
@@ -1,5 +1,5 @@
 {{Automatic taxobox}}
-'''Aẓalim wuccen''' neɣ '''Aflilu yilel''' ([[Assaɣ ussnan]]: '''Drimia maritima''') d [[talmest]] n [[imɣan|yimɣan]] yeṭṭafaren [[tawsit (tudersent)|tawsit]] n [[ikfil|yikfil]] deg [[tawacult (tasnudert)|twacult]] n [[tizikemt|tzikemt]]
+'''Aẓalim wuccen''' neɣ '''Ikfil''' neɣ '''Aflilu yilel''' ([[Assaɣ ussnan]]: '''Drimia maritima''') d [[talmest]] n [[imɣan|yimɣan]] yeṭṭafaren [[tawsit (tudersent)|tawsit]] n [[ikfil|yikfil]] deg [[tawacult (tasnudert)|twacult]] n [[tizikemt|tzikemt]]
 
 == Aglam ==
 
