--- a/Tallemt_izimer.mw
+++ b/Tallemt_izimer.mw
@@ -1,5 +1,21 @@
 {{Databox}}
-{{Datastub}}
+'''Tallemt yizimer''' ([[Assaɣ ussnan]]: '''Reseda luteola''') d [[talmest]] n [[imɣan|yimɣan]] [[imɣi asaɣur|isaɣuren]] yeṭṭafaren [[tawsit (tudersent)|tawsit]] n [[igerjdi]] deg [[tawacult (tasnudert)|twacult]] n [[tigrejdin|tegrejdin]] 
+
+Talmest-a tettemɣay-d s tuget deg utaram d unẓul n [[Turuft|Uruppa]] yakk d [[Tamurt n Leqbayel|tmurt n Iqbayliyen]] 
+
+== Aglam ==
+
+== Ideggan n wemɣay ==
+
+== Asexdem ==
+
+== Tiwlafin ==
+
+== Ẓeṛ daɣen ==
+
+[[Taggayt:Imɣan]] 
+[[Taggayt:Igerjdi]]
+
 == Tilmas ==
 
 [[Tugna:Asbuɣ IMG 2295 reseda.jpg|thumb|Reseda luteola - Tallemt i zimer<ref>‘Étude botanique sur la Kabylie du Jurjura, avec catalogue’ - Aristide Letourneux - Imprimerie Nationale Française, Paris 1870</ref>]]
