*Empty MediaWiki Message*

--- a/Tallemt_izimer.mw
+++ b/Tallemt_izimer.mw
@@ -1,7 +1,7 @@
 {{Databox}}
-'''Tallemt yizimer''' ([[Assaɣ ussnan]]: '''Reseda luteola''') d [[talmest]] n [[imɣan|yimɣan]] [[imɣi asaɣur|isaɣuren]] yeṭṭafaren [[tawsit (tudersent)|tawsit]] n [[igerjdi]] deg [[tawacult (tasnudert)|twacult]] n [[tigrejdin|tegrejdin]] 
+'''Tallemt yizimer''' neɣ '''Asbuɣ''' ([[Assaɣ ussnan]]: '''Reseda luteola''') d [[talmest]] n [[imɣan|yimɣan]] [[imɣi asaɣur|isaɣuren]] yeṭṭafaren [[tawsit (tudersent)|tawsit]] n [[igerjdi]] deg [[tawacult (tasnudert)|twacult]] n [[tigrejdin|tegrejdin]] 
 
-Talmest-a tettemɣay-d s tuget deg utaram d unẓul n [[Turuft|Uruppa]] yakk d [[Tamurt n Leqbayel|tmurt n Iqbayliyen]] 
+Talmest-a tettemɣay-d s tuget deg utaram d unẓul n [[Turuft|Uruppa]] yakk d [[Tamurt n Leqbayel|tmurt n Iqbayliyen]]
 
 == Aglam ==
 
