*Empty MediaWiki Message*

--- a/Igerjdi.mw
+++ b/Igerjdi.mw
@@ -1,5 +1,5 @@
 {{Automatic taxobox}}
-'''Igerjdi''' neɣ '''Asbuɣ''' ([[Assaɣ ussnan]]: '''Reseda''') d [[tawsit (tudersent)|tawsit]] n [[imɣan|yimɣan]] [[imɣi asaɣur|isaɣuren]] yeṭṭafaren [[tawacult (tasnudert)|tawacult]] [[tigrejdin|tegrejdin]]. [[Talmest|Tilmas]] n tewsit-a ttemɣayen-tt-d g [[ilel agrakal|wemda n yilel agrakal]] d unẓul utrim n [[Asya]] d [[Tigzirin tiknariyin]]. dɣa kra n tilmas-a gant d [[imɣ n useggas]] kra n iden gant d [[imɣi asenseggas]] ma d tid n iden gant d [[imɣi imezgi|timezgatin]]
+'''Igerjdi''' neɣ '''Asbuɣ''' ([[Assaɣ ussnan]]: '''Reseda''') d [[tawsit (tudersent)|tawsit]] n [[imɣan|yimɣan]] [[imɣi asaɣur|isaɣuren]] yeṭṭafaren [[tawacult (tasnudert)|tawacult]] [[tigrejdin|tegrejdin]]. [[Talmest|Tilmas]] n tewsit-a ttemɣayen-tt-d g [[ilel agrakal|wemda n yilel agrakal]] d unẓul utrim n [[Asya]] d [[Tigzirin tiknariyin]]. dɣa kra n tilmas-a gant d [[imɣi n useggas]] kra n iden gant d [[imɣi asenseggas]] ma d tid n iden gant d [[imɣi imezgi|timezgatin]]
 
 == Aglam ==
 
