*Empty MediaWiki Message*

--- a/Taseṭṭa_n_weyrad.mw
+++ b/Taseṭṭa_n_weyrad.mw
@@ -1,5 +1,7 @@
 {{Databox}}
-{{Datastub}}
+'''Taseṭṭa weyrad''' ([[Assaɣ ussnan]]: '''Reseda alba''') d [[talmest]] n [[imɣan|yimɣan]] [[imɣi asaɣur|isaɣuren]] yeṭṭafaren [[tawsit (tudersent)|tawsit]] n [[igerjdi]] deg [[tawacult (tasnudert)|twacult]] n [[tigrejdin|tegrejdin]] 
+
+Talmest-a tettemɣay-d deg tamiwin i d-yezzin i [[ilel agrakal|yilel agrakal]]
 
 == Tilmas == 
 
