*Empty MediaWiki Message*

--- a/Taseṭṭa_n_weyrad.mw
+++ b/Taseṭṭa_n_weyrad.mw
@@ -3,8 +3,10 @@
 
 Talmest-a tettemɣay-d deg tamiwin i d-yezzin i [[ilel agrakal|yilel agrakal]]
 
-== Tilmas == 
+== Aglam == 
 
+
+== Tiwlafin ==
 [[Tugna:Taṣeṭṭa n wayrad .jpg|thumb|Reseda alba  - Taṣeṭṭa n wayrad<ref>'Imɣan n Tensawt - Plantes de Kabylie ' - Saïd Zidat - Editions Innexsys, Luxembourg, Avril 2016 <nowiki>ISBN 978-99959-0-205-6</nowiki>  www.imghantensawt.lu</ref>]]
 
 ==Ismawen==
