*Empty MediaWiki Message*

--- a/Taseṭṭa_n_weyrad.mw
+++ b/Taseṭṭa_n_weyrad.mw
@@ -15,4 +15,7 @@ Talmest-a tettemɣay-d deg tamiwin i d-yezzin i [[ilel agrakal|yilel agrakal]]
 
 == Tiwelhiwin ==
 
+
 [[Taggayt:Imɣan]]
+[[Taggayt:Igerjdi]]
+[[Taggayt:Tigrejdin]]
