*Empty MediaWiki Message*

--- a/Tisemlelt.mw
+++ b/Tisemlelt.mw
@@ -1,5 +1,9 @@
 {{Databox}}
-{{Datastub}}
+'''Tisemlelt''' ([[Assaɣ ussnan]]: '''Salix''') d [[tawsit (tudersent)|tawsit]] n [[aseklu|isekla]] d [[tamdikt|tmedkin]] yeṭṭafaren [[tawacult (tasnudert)|tawacult]] [[tasemlalt]]. Tawsit-a d tin ilan (yesɛan) azal n 360 n [[talmest|telmas]] id yettemɣayen deg umur ameqqran n umadal aladɣa ideggan [[Agri|igrawayen]] n tamiwin [[anezwu amnummsan|timnummsanin d [[asemmiṭ|tisemmaṭin]] n wezgen agafan n tegnit
+
+== [[Tasnettit]] ==
+
+== Ideggan n wemɣay ==
 
 == Tilmas ==
 
