--- a/Tisemlelt.mw
+++ b/Tisemlelt.mw
@@ -25,8 +25,10 @@
 *Ismawen-is nniḍen s tmaziɣt: 
 
 
-== Isseqdac ==
+
 
 
 <references />
 [[Taggayt:Imɣan]]
+[[Taggayt:Tiwsitin n yimɣan
+[[Taggayt:Tasemlalt]]
