*Empty MediaWiki Message*

--- a/Tisemlelt.mw
+++ b/Tisemlelt.mw
@@ -6,10 +6,9 @@
 == Ideggan n wemɣay ==
 
 == Tilmas ==
-* [[Tafsent]] — (''Salix alba'''
+* [[Tafsent]] — (''Salix alba'')
 * [[Isemlel ademdam]] — (''Salix acutifolia'')
 * [[Isemlel amazag]] — (''Salix alaxensis'')
-
 
 == Tiwlafin n telmas ==
 [[Tugna:Salix alba foliage.JPG|thumb|''Salix alba'' ([[Tafsent]]<ref>'Amawal n Yemɣan - Lexique de plantes ' - Chabane Mohand u Remdane - Mémoire d'études en Agronomie - Université de Tizi ouzou (non daté ~années 80)</ref><ref>‘Répertoire des noms indigènes des plantes spontanées, cultivées et utilisées dans le nord de l’Afrique.’ - Louis Charles Trabut - Alger 1935</ref>]])]]
