--- a/Tisemlelt.mw
+++ b/Tisemlelt.mw
@@ -11,7 +11,7 @@
 * [[Isemlel amazag]] — (''Salix alaxensis'')
 
 == Tiwlafin n telmas ==
-[[Tugna:Salix alba foliage.JPG|thumb|''Salix alba'' ([[Tafsent]]<ref>'Amawal n Yemɣan - Lexique de plantes ' - Chabane Mohand u Remdane - Mémoire d'études en Agronomie - Université de Tizi ouzou (non daté ~années 80)</ref><ref>‘Répertoire des noms indigènes des plantes spontanées, cultivées et utilisées dans le nord de l’Afrique.’ - Louis Charles Trabut - Alger 1935</ref>]])]]
+[[Tugna:Salix alba foliage.JPG|thumb|''Salix alba'' ([[Tafsent]]]]
 
 == Tisemlelt deg yidles ==
 
