*Empty MediaWiki Message*

--- a/Tafsent.mw
+++ b/Tafsent.mw
@@ -1,5 +1,15 @@
 {{Databox}}
-{{Datastub}}
+'''Tafessant''' neɣ '''Tafsent''' ([[Assaɣ ussnan]]: '''Salix alba''') d [[talmest]] n [[aseklu|isekla]] yeṭṭafaren [[tawsit (tudersent)|tawsit]] n [[tisemlelt|tsemlel]]. Talmest-a tettemɣay-d deg yideggan [[Agri|igrawayen]] n tamiwin [[anezwu amnummsan|timnummsanin]]
+
+== Aglam ==
+
+== Ideggan n wemɣay ==
+
+== Tiwlafin ==
+
+== Asexdem ==
+
+== Ẓeṛ daɣen ==
 
 == Tilmas ==
 
