*Empty MediaWiki Message*

--- a/Tallemt_izimer.mw
+++ b/Tallemt_izimer.mw
@@ -1,7 +1,7 @@
 {{Databox}}
-'''Tallemt yizimer''' neɣ '''Asbuɣ''' ([[Assaɣ ussnan]]: '''Reseda luteola''') d [[talmest]] n [[imɣan|yimɣan]] [[imɣi asaɣur|isaɣuren]] yeṭṭafaren [[tawsit (tudersent)|tawsit]] n [[igerjdi]] deg [[tawacult (tasnudert)|twacult]] n [[tigrejdin|tegrejdin]] 
+'''Tallemt yizimer''' ([[Assaɣ ussnan]]: '''Reseda luteola''') d [[talmest]] n [[imɣan|yimɣan]] [[imɣi asaɣur|isaɣuren]] yeṭṭafaren [[tawsit (tudersent)|tawsit]] n [[igerjdi]] deg [[tawacult (tasnudert)|twacult]] n [[tigrejdin|tegrejdin]] 
 
-Talmest-a tettemɣay-d s tuget deg utaram d unẓul n [[Turuft|Uruppa]] yakk d [[Tamurt n Leqbayel|tmurt n Iqbayliyen]]
+Talmest-a tettemɣay-d s tuget deg utaram d unẓul n [[Turuft|Uruppa]] yakk d [[Tamurt n Leqbayel|tmurt n Iqbayliyen]] 
 
 == Aglam ==
 
@@ -15,6 +15,19 @@ Talmest-a tettemɣay-d s tuget deg utaram d unẓul n [[Turuft|Uruppa]] yakk d [
 
 [[Taggayt:Imɣan]] 
 [[Taggayt:Igerjdi]]
+
+== Tilmas ==
+
+[[Tugna:Asbuɣ IMG 2295 reseda.jpg|thumb|Reseda luteola - Tallemt i zimer<ref>‘Étude botanique sur la Kabylie du Jurjura, avec catalogue’ - Aristide Letourneux - Imprimerie Nationale Française, Paris 1870</ref>]]
+
+
+== Ismawen ==
+*Isem-is s latinit: Reseda luteola
+*Isem-is s tefransist: Réseda des teinturiers
+*Ismawen-is nniḍen s teqbaylit: Asbuɣ<ref>'Imɣan n Tensawt - Plantes de Kabylie ' - Saïd Zidat - Editions Innexsys, Luxembourg, Avril 2016 <nowiki>ISBN 978-99959-0-205-6</nowiki>  www.imghantensawt.lu</ref>
+*Ismawen-is nniḍen s tmaziɣt: 
+
+== Isseqdac ==
 
 == Tiwelhiwin ==
 {{refs}}
