*Empty MediaWiki Message*

--- a/Iskerci.mw
+++ b/Iskerci.mw
@@ -1,5 +1,20 @@
-{{Databox}}
-{{Datastub}}
+{{Automatic taxobox}}
+'''Iskerci imezdi''' neɣ '''Iskerci''' Kan ([[Assaɣ ussnan]]: '''Smilax aspera''') d [[talmest]] n [[imɣan|yimɣan]] [[taynayyawin|iynayawwen]] yeṭṭafaren [[tawsit (tudersent)|tawsit]] n [[iskerci (tawsit)|iskerci]] deg [[tawacult (tasnudert)|twacult]] n [[tiskercin|teskercin]]. Talmest-a  tettwasexdem i wsuji n kra n waṭṭanen 
+
+== Aglam ==
+
+== [[Adu-telmest|Tidu-lmasin]] ==
+
+== Ideggan n wemɣay ==
+
+== Iskerci i wsuji ==
+
+== Tiwlafin ==
+
+== Ẓeṛ daɣen ==
+
+[[Taggayt:imɣan]]
+[[Taggayt:tiskercin]]
 
 == Tilmas ==
 
