*Empty MediaWiki Message*

--- a/Afernan.mw
+++ b/Afernan.mw
@@ -19,3 +19,8 @@ Tugna:Quercus suber corc.JPG|
 </gallery></center>
 
 == Ẓeṛ daɣen ==
+
+[[Taggayt:Isekla n yilel agrakal]]
+[[Taggayt:Isekla n tmurt n Iqbayliyen]]
+[[Taggayt:Imɣan]]
+[[Taggayt:Isekla]]
