*Empty MediaWiki Message*

--- a/Afernan.mw
+++ b/Afernan.mw
@@ -1,5 +1,7 @@
 {{Automatic taxobox}}
-'''Afernan''' neɣ '''Tiggit''' ([[Assaɣ ussnan]]: '''Quercus suber''') d [[talmest]] n [[aseklu|isekla]] yeṭṭafaren [[tawsit (tudersent)|tawsit]] n [[Adren|udren]]. [[Tiginit]] n telmest-a yettusexdem i wfaras n [[iferki (tanga)|wexnac]] 
+'''Afernan''' neɣ '''Tiggit''' ([[Assaɣ ussnan]]: '''Quercus suber''') d [[talmest]] n [[aseklu|isekla]] yeṭṭafaren [[tawsit (tudersent)|tawsit]] n [[Adren|udren]] deg [[tawacult (tasnudert)|twacult]] n [[Tazzant|Tazzant]]. 
+
+[[Tiginit]] n telmest-a yettusexdem i wfaras n [[iferki (tanga)|wexnac]]
 
 == Aglam ==
 
