*Empty MediaWiki Message*

--- a/Afernan.mw
+++ b/Afernan.mw
@@ -26,3 +26,4 @@ Tugna:Quercus suber corc.JPG|
 [[Taggayt:Isekla n tmurt n Iqbayliyen]]
 [[Taggayt:Imɣan]]
 [[Taggayt:Isekla]]
+[[Taggayt:Tizzanin]]
