*Empty MediaWiki Message*

--- a/Idernen.mw
+++ b/Idernen.mw
@@ -1,6 +1,6 @@
 [[Tugna:Chestnut.jpg|thumb|250px|Idernen]]
 
-'''Idernen''' (Yettwassen s ''Lqesṭel القسطل'') d [[igumma|agummu]] n [[aseklu|tseklut]] n [[Tidernent|tdernent]] yeṭṭafaren [[tawacult (tasnudert)|tawacult]] n [[Tadernent|tdernent]]
+'''Idernen''' (Yettwassen s ''Lqesṭel القسطل'') d [[igumma|agummu]] n [[aseklu|tseklut]] n [[adernen|tdernent]] yeṭṭafaren [[tawacult (tasnudert)|tawacult]] n [[tazzant]]
 
 == Ẓeṛ daɣen == 
 
