*Empty MediaWiki Message*

--- a/Adernen.mw
+++ b/Adernen.mw
@@ -1,5 +1,5 @@
 {{Automatic taxobox}}
-'''Adernen''' neɣ '''Idernen''' ([[Assaɣ ussnan]]: '''Castanea''') d [[tawsit (tudersent)|tawsit]] n [[Aseklu|isekla]] yeṭṭafaren [[tawacult (tasnudert)|tawacult]] n [[Tazzant|tezzant]]. Isekla n tewsit-a isem-it-sen '''Tidernent''' (Asget: '''Tidernin'''). Deg tewsit-a tella [[talmest|telmest]] isem-is [[idernen aẓidan]] (''Castanea sativa'') id yettaken [[igumma|agummu]] isem-is [[adernen]] 
+'''Adernen''' neɣ '''Idernen''' ([[Assaɣ ussnan]]: '''Castanea''') d [[tawsit (tudersent)|tawsit]] n [[Aseklu|isekla]] yeṭṭafaren [[tawacult (tasnudert)|tawacult]] n [[Tazzant|tezzant]]. Isekla n tewsit-a isem-it-sen '''Tidernent''' (Asget: '''Tidernin'''). Deg tewsit-a tella [[talmest|telmest]] isem-is [[idernen aẓidan]] (''Castanea sativa'') id yettaken [[igumma|agummu]] isem-is [[idernen]]
 
 == Aglam ==
 
