*Empty MediaWiki Message*

--- a/Adernen.mw
+++ b/Adernen.mw
@@ -18,7 +18,8 @@
 
 == Ẓeṛ daɣen ==
 
-[[Taggayt:Tiwsitin n yimɣan
+[[Taggayt:Tiwsitin n yimɣan]]
+[[Taggayt:isekla imesgumma]]
 [[Taggayt:Tazzant]]
 [[Taggayt:Tizzanin]]
 [[Taggayt:Idernen]]
