*Empty MediaWiki Message*

--- a/Adernen.mw
+++ b/Adernen.mw
@@ -4,6 +4,15 @@
 == Aglam ==
 
 == Umuɣ n telmas ==
+* Tilmas n Uruppa (d Tefriqt ugafa):
+** [[Idernen aẓidan]] — (''Castanea sativa'')
+
+* Tilmas n Asya:
+** [[Idernen n Kurya]] — (''Castanea crenata'')
+** [[Idernen n Ccinwa]] — (''Castanea mollissima'')
+
+* Tilmas n Marikan
+** [[Idernen n Marikan]]
 
 == Aṭṭanen ==
 
