*Empty MediaWiki Message*

--- a/Adernen.mw
+++ b/Adernen.mw
@@ -17,6 +17,7 @@
 == Aṭṭanen ==
 
 == Tawacult ==
+Idernen d tawsit yeṭṭafaren tawacult n [[Tazzant|tazzant]]. Anda iy ttekki daɣen [[Adren|wedren]] yakk d [[azzan|wazzan]]
 
 == Addar n isekla ==
 
