*Empty MediaWiki Message*

--- a/Azzan.mw
+++ b/Azzan.mw
@@ -1,5 +1,5 @@
 {{Automatic taxobox}}
-'''Azzan''' ([[Assaɣ ussnan]]: '''Fagus''') d [[tawsit (tudersent)|tawsit]] n [[aseklu|isekla]] [[imɣi imezgi|imezgiyen]] yeṭṭafaren [[tawacult (tasnudert)|tawacult]] n [[tazzant|tezzant]]. Llant kra n temrwin n [[talmest|telmas]] id yettemɣayen deg [[Turuft]] d [[Asya]] d [[Tamrikt n Ugafa|Marikan Ugafa]] yakk d [[Tafriqt n Ugafa|Tefriqt ugafa]] (deg [[idurar n waṭlas]]) 
+'''Azzan''' ([[Assaɣ ussnan]]: '''Fagus''') d [[tawsit (tudersent)|tawsit]] n [[aseklu|isekla]] [[imɣi imezgi|imezgiyen]] yeṭṭafaren [[tawacult (tasnudert)|tawacult]] n [[tazzant|tezzant]]. Llant kra n temrwin n [[talmest|telmas]] id yettemɣayen deg [[Turuft]] d [[Asya]] d [[Tamrikt n Ugafa|Marikan Ugafa]] yakk d [[Tafriqt n Ugafa|Tefriqt ugafa]] (deg [[idurar n waṭlas]] d [[Tamurt n Leqbayel|Tmurt n Iqbayliyen]])
 
 == Aglam ==
 
