--- a/Adren.mw
+++ b/Adren.mw
@@ -7,6 +7,7 @@ Llan ugar n 600 n [[Talmest|talmest]] n udren ttemɣayent-d deg [[Azgen agafan n
 == Adren deg yidles ==
 
 == Tilmas ==
+* [[Takarruct]] — (''Quercus ilex'')
 
 == Aṭṭanen d wuguren ==
 
