--- a/Akerruc.mw
+++ b/Akerruc.mw
@@ -6,13 +6,9 @@ Talmest-a tettemɣay-d deg unẓul n [[Uruppa|Turuft]] d [[Tafriqt n Ugafa|Tefri
 
 == Aglam ==
 
-== Tilmas ==
+== Tiwlafin ==
 
 [[Tugna:Chenevert1.jpg|thumb|Quercus ilex subsp. ballota - Takarruct]]
-[[Tugna:Quercus ilex trunk 01 by Line1.jpg|thumb|Quercus ilex subsp. ballota - Takarruct<ref>'Plantes médicinales de Kabylie' - Mohand Aïd Youssef - Ibis Press -Paris 2006</ref><ref>'Amawal n Yemɣan - Lexique de plantes ' - Chabane Mohand u Remdane - Mémoire d'études en Agronomie - Université de Tizi ouzou (non daté ~années 80)</ref>]]
-[[Tugna:Quercus suber5.jpg|thumb|Quercus suber - Takarruct]]
-[[Tugna:Quercus suber - Köhler–s Medizinal-Pflanzen-254.jpg|thumb|Quercus suber - Takarruct<ref>‘Étude botanique sur la Kabylie du Jurjura, avec catalogue’ - Aristide Letourneux - Imprimerie Nationale Française, Paris 1870</ref>]]
-
 
 == Ismawen ==
 *Isem-is s latinit: Quercus ilex subsp. ballota (llan deg-s aṭas n leṣnaf), Querqus suber
