--- a/Akerruc.mw
+++ b/Akerruc.mw
@@ -12,11 +12,7 @@ Talmest-a tettemɣay-d deg unẓul n [[Uruppa|Turuft]] d [[Tafriqt n Ugafa|Tefri
 
 [[Tugna:Chenevert1.jpg|thumb|Quercus ilex subsp. ballota - Takarruct]]
 
-== Ismawen ==
-*Isem-is s latinit: Quercus ilex subsp. ballota (llan deg-s aṭas n leṣnaf), Querqus suber
-*Isem-is s tefransist: Chêne vert, Chêne-liège
-*Ismawen-is nniḍen s teqbaylit: Akarruc, Abelluḍ (aɛeqqa)
-*Ismawen-is nniḍen s tmaziɣt: 
+== Aṭṭanen ==
 
 == Isseqdac ==
 
