*Empty MediaWiki Message*

--- a/Akerruc.mw
+++ b/Akerruc.mw
@@ -19,3 +19,7 @@ Talmest-a tettemɣay-d deg unẓul n [[Uruppa|Turuft]] d [[Tafriqt n Ugafa|Tefri
 == Tiwelhiwin ==
 {{refs}}
 [[Taggayt:Imɣan]]
+[[Taggayt:Isekla n tmurt n Iqbayliyen]]
+[[Taggayt:Isekla n unezwu agraklan]]
+[[Taggayt:Tazzant]]
+[[Taggayt:Isekla imeɣlalen n tizzegzut]]
