*Empty MediaWiki Message*

--- a/Akerruc.mw
+++ b/Akerruc.mw
@@ -1,25 +1,27 @@
 {{Automatic taxobox}}
-'''Akerruc''' ([[Assaɣ ussnan]]: '''Quercus ilex''') d [[talmest]] n [[aseklu|isekla]] [[ameɣlal n tizzegzut|imeɣlalen n tizzegzut]] yeṭṭafaren [[tawsit (tudersent)|tawsit]] n [[Adren|wedren]] yettekkin deg [[tawacult (tasnudert)|twacult]] n [[tazzant]]
-
-Isem n useklu isem-is '''Takerruct'''
+'''Akerruc''' ([[Assaɣ ussnan]]: '''Quercus ilex''') d [[talmest]] n [[aseklu|isekla]] [[ameɣlal n tizzegzut|imeɣlalen n tizzegzut]] yeṭṭafaren [[tawsit (tudersent)|tawsit]] n [[Adren|wedren]] yettekkin deg [[tawacult (tasnudert)|twacult]] n [[tazzant]] 
 
 == Ideggan n wemɣay ==
 Talmest-a tettemɣay-d deg unẓul n [[Uruppa|Turuft]] d [[Tafriqt n Ugafa|Tefriqt ugafa]] aladɣa di [[Tamurt n Leqbayel|tmurt n Iqbayliyen]] d [[Arif|warif]] 
 
 == Aglam ==
 
-== Tiwlafin ==
+== Tilmas ==
 
 [[Tugna:Chenevert1.jpg|thumb|Quercus ilex subsp. ballota - Takarruct]]
+[[Tugna:Quercus ilex trunk 01 by Line1.jpg|thumb|Quercus ilex subsp. ballota - Takarruct<ref>'Plantes médicinales de Kabylie' - Mohand Aïd Youssef - Ibis Press -Paris 2006</ref><ref>'Amawal n Yemɣan - Lexique de plantes ' - Chabane Mohand u Remdane - Mémoire d'études en Agronomie - Université de Tizi ouzou (non daté ~années 80)</ref>]]
+[[Tugna:Quercus suber5.jpg|thumb|Quercus suber - Takarruct]]
+[[Tugna:Quercus suber - Köhler–s Medizinal-Pflanzen-254.jpg|thumb|Quercus suber - Takarruct<ref>‘Étude botanique sur la Kabylie du Jurjura, avec catalogue’ - Aristide Letourneux - Imprimerie Nationale Française, Paris 1870</ref>]]
 
-== Aṭṭanen ==
+
+== Ismawen ==
+*Isem-is s latinit: Quercus ilex subsp. ballota (llan deg-s aṭas n leṣnaf), Querqus suber
+*Isem-is s tefransist: Chêne vert, Chêne-liège
+*Ismawen-is nniḍen s teqbaylit: Akarruc, Abelluḍ (aɛeqqa)
+*Ismawen-is nniḍen s tmaziɣt: 
 
 == Isseqdac ==
 
 == Tiwelhiwin ==
 {{refs}}
 [[Taggayt:Imɣan]]
-[[Taggayt:Isekla n tmurt n Iqbayliyen]]
-[[Taggayt:Isekla n unezwu agraklan]]
-[[Taggayt:Tazzant]]
-[[Taggayt:Isekla imeɣlalen n tizzegzut]]
