*Empty MediaWiki Message*

--- a/Adren.mw
+++ b/Adren.mw
@@ -21,7 +21,7 @@ Llan ugar n 600 n [[Talmest|talmest]] n udren ttemɣayent-d deg [[Azgen agafan n
 
 * [[Afernan]]
 
-* [[Tasaft n izem]]
+* [[Tasaft yizem]]
 
 * [[Tigri]]
 
