--- a/Tasaft_yizem.mw
+++ b/Tasaft_yizem.mw
@@ -17,6 +17,6 @@
 [[Taggayt:Tazzant]]
 [[Taggayt:Imɣan]]
 [[Taggayt:Adren]]
-[[Taggayt:Isekla imeɣalen n tizzegzut]]
+[[Taggayt:Isekla imeɣlalen n tizzegzut]]
 [[Taggayt:Isekla]]
 [[Taggayt:Isekla imesgumma]]
