--- a/Adren.mw
+++ b/Adren.mw
@@ -3,7 +3,14 @@
 
 Isekla n wedren d tid ilan (yesɛan) tuggta meqqren deg wayen yezzin ɣef ubleɣ d tarrayt n wemɣay anda llant tmedkin ur ugarent ara 1 Mitre deg wakud dgi llant telmas n isekla i yugaren 30 m. Dɣa tilmas-a ur sseɣlayent ara [[iferr|iferran]] deg [[amwan|umwan]] di tamiwin anda yella unzwu [[anzwu amnummsan|yemnummsen]] tilmas-a gant d [[ameɣlal n tizzegzut|timeɣlalin n tizzegzut]] maca deg yideggan [[asemmiṭ|isemmṭen]] amur ameqran n tilmas-a sseɣlayen-t iferr
 
-== Adren deg yidles ==
+== Aglam ==
+
+== Asismel ==
+(Yeqqen ar [[umuɣ n telmas n yider]])
+
+Tawsit n yider ([[Assaɣ ussnan|a.u]] ''Quercus'') tettadam gar n 200 ar 600 n telmas. Tilmas-a ttemɣayen-tt-d s talɣa tagejdant deg yideggan [[anzwu amnummsan|imnummsanen]] alamma d ideggan [[anezwu amezzay|izunmezzayen]] deg wezgen agafan n tegnit. Akken daɣen id ttemɣayent deg yideggan yeflalen n [[Indonesia]], s unect n [[Anagraw n isalan imessartiyen ummid|ITIS]] tilmas-a gant d:
+
+* [[Ider amric]] — (''Quercus acerifolia'')
 
 == Tilmas ==
 * [[Takarruct]] — (''Quercus ilex'')
