--- a/Akerruc.mw
+++ b/Akerruc.mw
@@ -1,5 +1,5 @@
 {{Automatic taxobox}}
-'''Akerruc''' ([[Assaɣ ussnan]]: '''Quercus ilex''') d [[talmest]] n [[aseklu|isekla]] [[ameɣlal n tizzegzut|imeɣlalen n tizzegzut]] yeṭṭafaren [[tawsit (tudersent)|tawsit]] n [[Adren|wedren]] yettekkin deg [[tawacult (tasnudert)|twacult]] n [[tazzant]] 
+'''Akerruc''' neɣ '''Tasaft''' ([[Assaɣ ussnan]]: '''Quercus ilex''') d [[talmest]] n [[aseklu|isekla]] [[ameɣlal n tizzegzut|imeɣlalen n tizzegzut]] yeṭṭafaren [[tawsit (tudersent)|tawsit]] n [[Adren|wedren]] yettekkin deg [[tawacult (tasnudert)|twacult]] n [[tazzant]]
 
 == Ideggan n wemɣay ==
 Talmest-a tettemɣay-d deg unẓul n [[Uruppa|Turuft]] d [[Tafriqt n Ugafa|Tefriqt ugafa]] aladɣa di [[Tamurt n Leqbayel|tmurt n Iqbayliyen]] d [[Arif|warif]] 
