*Empty MediaWiki Message*

--- a/Adren.mw
+++ b/Adren.mw
@@ -13,7 +13,28 @@ Tawsit n yider ([[Assaɣ ussnan|a.u]] ''Quercus'') tettadam gar n 200 ar 600 n t
 * [[Ider amric]] — (''Quercus acerifolia'')
 
 == Tilmas ==
-* [[Takarruct]] — (''Quercus ilex'')
+* [[Takarruct|Tasaft]] — (''Quercus ilex'')
+* [[Tasaft yizem]] — (''Quercus coccifera'') 
+* [[Afernan]] — (''Quercus suber'') 
+* [[Ider azeggaɣ]] — ('' Quercus rubra'')
+* [[Titcet]] — (''Quercus pyrenaica'') 
+* [[Tucet]] (neɣ [[tucet|tacet]] neɣ [[tucet|tazanet]]) — (''Quercus canariensis'') 
+
+== Aṭṭanen ==
+
+== Asexdem d iseqdac ==
+
+== Ider deg yidles ==
+
+== Tiwlafin ==
+
+== Ẓeṛ daɣen ==
+
+[[Taggayt:Isekla imeɣlalen n tizzegzut]]
+[[Taggayt:Tazzant]]
+[[Taggayt:Isekla]]
+[[Taggayt:Tiwsitin n yimɣan]]
+[[Taggayt:Imɣan isnajyanen]]
 
 == Aṭṭanen d wuguren ==
 
