*Empty MediaWiki Message*

--- a/Akerruc.mw
+++ b/Akerruc.mw
@@ -25,3 +25,7 @@ Talmest-a tettemɣay-d deg unẓul n [[Uruppa|Turuft]] d [[Tafriqt n Ugafa|Tefri
 == Tiwelhiwin ==
 {{refs}}
 [[Taggayt:Imɣan]]
+[[Taggayt:Imɣan imeɣlalen n tizzegzut]]
+[[Taggayt:Tazzant]]
+[[Taggayt:Adren]]
+[[Taggayt:Isekla]]
