*Empty MediaWiki Message*

--- a/Tucet.mw
+++ b/Tucet.mw
@@ -1,13 +1,6 @@
-[[Tugna:Quercus canariensis xQ. faginea Bellota 2010-10-03 SierraMadrona.jpg|thumb|Quercus canariensis - Tect, Zehn<ref>'Amawal n Yemɣan - Lexique de plantes ' - Chabane Mohand u Remdane - Mémoire d'études en Agronomie - Université de Tizi ouzou (non daté ~années 80)</ref><ref>‘Étude botanique sur la Kabylie du Jurjura, avec catalogue’ - Aristide Letourneux - Imprimerie Nationale Française, Paris 1870</ref>,]]
-[[Tugna:Quercus faginea 2009December20 Habitus SierraMadrona.jpg|thumb|Quercus faginea - Tect, Zehn<ref>'Plantes médicinales de Kabylie' - Mohand Aïd Youssef - Ibis Press -Paris 2006</ref>]]
+== Tiwlafin ==
 
-
-Isem-is s latinit: Quercus canariensis, Quercus afares
-
-Isem-is s tefransist: Chêne zéen ou des Canaries, 
-
-Ismawen-is nniḍen s teqbaylit: 
-Ismawen-is nniḍen s tmaziɣt: 
+[[Tugna:Quercus canariensis xQ. faginea Bellota 2010-10-03 SierraMadrona.jpg|thumb|Quercus canariensis - Tucet<ref>'Amawal n Yemɣan - Lexique de plantes ' - Chabane Mohand u Remdane - Mémoire d'études en Agronomie - Université de Tizi ouzou (non daté ~années 80)</ref><ref>‘Étude botanique sur la Kabylie du Jurjura, avec catalogue’ - Aristide Letourneux - Imprimerie Nationale Française, Paris 1870</ref>,]]
 
 == Ismawen ==
 *Isem-is s latinit: Quercus canariensis, Quercus afares, Quercus faginea
