--- a/Tucet.mw
+++ b/Tucet.mw
@@ -14,5 +14,10 @@
 == Isseqdac ==
 
 == Tiwelhiwin ==
-{{refs}}
+
 [[Taggayt:Imɣan]]
+[[Taggayt:Isekla n unezwu agraklan]]
+[[Taggayt:Isekla imesgumma]]
+[[Taggayt:Isekla]]
+[[Taggayt:Tazzant]]
+[[Taggayt:Adren]]
