--- a/Taksanna.mw
+++ b/Taksanna.mw
@@ -1,6 +1,6 @@
 {{Infobox city}}
 
-'''Taksanna''' ([[Tafransist]]: ''Texenna'', [[Taɛrabt]]: ''تاكسنة''), d yiwet taɣiwant n Tmurt Leqbayel, i tezga-d al {{Unité|22|km}} g anẓul n [[Tawilayt_n_Jijel|Tawilayt n Jijel]]. Taɣiwant-aya, tesɛa azal n 15 682 imezdaɣ deg useggwas n 2008. G luqt n listiɛmar llan qqarn-as ''"Douar M'etlatine"''.
+'''Takselt''' neɣ '''Takesna''' seld n [[aserɣin|userɣen]] (s [[Tafransist]]: ''Texenna'', s [[Taɛrabt|Tserɣint]]: ''تاكسنة'') d [[taɣiwant]] n [[Tamurt n Leqbayel|Tmurt n Iqbayliyen]] tezga-d al {{Unité|22|km}} g anẓul n [[Tawilayt_n_Jijel|ugezdu n Jijel]]. Taɣiwant-aya, tla (tesɛa) azal n 15 682 imezdaɣ deg useggwas n 2008. G tallit n tuṭṭfa llan qqarn-as ''"Douar M'etlatine"''.
 
 === Asideg (timella) ===
 
