--- a/Taksanna.mw
+++ b/Taksanna.mw
@@ -13,7 +13,7 @@
 |Anẓul-Agmuḍ = [[Ǧimla]]
 |Anẓul       = [[Budriɛa Ben Yaǧis]]
 |Anẓul-Amalu = [[Selma Benzyada]], [[Izragen]]
-|Amalu       = [[Selma Benzyada]]
+|Amalu       = [[Selma Benzyada|Ayt Fuɣal]]
 |Agafa-Amalu = [[Lɛewwana]] 
 }}
 
