*Empty MediaWiki Message*

--- a/Tisemlelt.mw
+++ b/Tisemlelt.mw
@@ -6,7 +6,7 @@
 == Ideggan n wemɣay ==
 
 == Tilmas ==
-* [[Tafsent]] — (''Salix alba'')
+* [[Tafsent|Isemlel]] — (''Salix alba'')
 * [[Isemlel ademdam]] — (''Salix acutifolia'')
 * [[Isemlel amazag]] — (''Salix alaxensis'')
 
