--- a/Tafsent.mw
+++ b/Tafsent.mw
@@ -1,5 +1,5 @@
 {{Databox}}
-'''Tafessant''' neɣ '''Tafsent''' ([[Assaɣ ussnan]]: '''Salix alba''') d [[talmest]] n [[aseklu|isekla]] yeṭṭafaren [[tawsit (tudersent)|tawsit]] n [[tisemlelt|tsemlel]]. Talmest-a tettemɣay-d deg yideggan [[Agri|igrawayen]] n tamiwin [[anezwu amnummsan|timnummsanin]]
+'''Isemlel''' neɣ '''Tafessant''' neɣ '''Tafsent''' ([[Assaɣ ussnan]]: '''Salix alba''') d [[talmest]] n [[aseklu|isekla]] yeṭṭafaren [[tawsit (tudersent)|tawsit]] n [[tisemlelt|tsemlel]]. Talmest-a tettemɣay-d deg yideggan [[Agri|igrawayen]] n tamiwin [[anezwu amnummsan|timnummsanin]]
 
 == Aglam ==
 
