*Empty MediaWiki Message*

--- a/Tucet.mw
+++ b/Tucet.mw
@@ -1,4 +1,7 @@
 {{Automatic taxobox}}
+'''Tucet''' neɣ '''Tacet''' neɣ '''Tazanet''' ([[Assaɣ ussnan]]: '''Quercus canariensis''') d [[talmest]] n [[aseklu|isekla]] yeṭṭafaren [[tawsit (tasnudert)|tawsit]] n [[Adren|yider]] yettekkin deg [[tawacult (tasnudert)|twacult]] n [[tazzant]]
+
+Talmest-a tettemɣay-d deg unẓul n [[Spanya]] d [[Portugal]] yakk d Ugafa n [[Ameṛṛuk|Umeṛṛuk]] d [[Tunes]] d [[Lezzayer]] (ula di [[Tamurt n Leqbayel|tmurt n Iqbayliyen]], ɣas akken [[assaɣ ussnan|isem-is amisin]] igan d '''Quercus canariensis''' yuder-d [[Tigzirin Tiknariyin]] maca ur d-ittemɣay ara s talɣa tagamant g tigzirin-a
 
 == Tiwlafin ==
 
