--- a/Tucet.mw
+++ b/Tucet.mw
@@ -8,6 +8,8 @@ Talmest-a tettemɣay-d deg unẓul n [[Spanya]] d [[Portugal]] yakk d Ugafa n [[
 [[Tugna:Quercus canariensis xQ. faginea Bellota 2010-10-03 SierraMadrona.jpg|thumb|Quercus canariensis - Tucet<ref>'Amawal n Yemɣan - Lexique de plantes ' - Chabane Mohand u Remdane - Mémoire d'études en Agronomie - Université de Tizi ouzou (non daté ~années 80)</ref><ref>‘Étude botanique sur la Kabylie du Jurjura, avec catalogue’ - Aristide Letourneux - Imprimerie Nationale Française, Paris 1870</ref>,]]
 
 == Aglam ==
+
+==Ismawen==
 *Isem-is s latinit: Quercus canariensis, Quercus afares, Quercus faginea
 *Isem-is s tefransist: Chêne des Canaries, Chêne de Kabylie, Chêne du Portugal
 *Ismawen-is nniḍen s teqbaylit: Zehn, Alba<ref>‘Étude botanique sur la Kabylie du Jurjura, avec catalogue’ - Aristide Letourneux - Imprimerie Nationale Française, Paris 1870</ref>, ?
