--- a/Tamezdayt_n_Yissu_amdudet.mw
+++ b/Tamezdayt_n_Yissu_amdudet.mw
@@ -1,5 +1,5 @@
 {{Databox}}
-'''Tafacga tarumit taḥeqqanit n [[Ɛisa]]''' d tafacga tarumit timziregt i-d-ixelqen g tamdint n Beijing (Agafa n Ccin) g useggas 1917. Ass-a, yella 2.5 melyun imasladen deg 45 timura.
+'''Tamezdayt tamdudet n Yissu''' d tafacga tarumit timziregt i-d-ixelqen g tamdint n Beijing (Agafa n Ccin) g useggas 1917. Ass-a, yella 2.5 melyun imasladen deg 45 timura.
 
 Tafacga tarumit-agi tettekka deg tafacga tarumit pruṭistant i-d-yettwaxlaqen g Tazzwara n lqern 20.
 
