*Empty MediaWiki Message*

--- a/Tamezdayt_n_Yissu_amdudet.mw
+++ b/Tamezdayt_n_Yissu_amdudet.mw
@@ -1,8 +1,9 @@
 {{Databox}}
-'''Tamezdayt n Yissu amdudet''' d tafacga tarumit timziregt i-d-ixelqen g tamdint n Beijing (Agafa n Ccin) g useggas 1917. Ass-a, yella 2.5 melyun imasladen deg 45 timura.
+'''Tamezdayt n Yissu amdudet''' d [[Tamezdayt (Asɣan)|tamezdayt]] tasimant ur teṭṭafar ula d yiwen seg [[agar amasɣan|wagaren]] [[Tamasiḥit|irummiyen]] n iden. Tennulfa-d g [[Pekin]] (tamenrut n [[Ccinwa]]) aseggas n [[1917]]. Asegrew agraɣlan n tmezdayt-a yezzuni (amellayu ''Yong Ji Len'' ɣef uqerru-yis) d akken  llan wazal n 1,5 n imelyan n yimdanen yeṭṭafaren tamezdayt-a seg yakk [[amenẓaw|imenẓawen]]. Dɣa tamezdayt-a tettumeggez d afurk seg umussu n [[tasemmumrawt|tsemmumrawt]] (''Pentecostalism'') yeṭṭafaren turda [[tapṛutestant]] 
 
-Tafacga tarumit-agi tettekka deg tafacga tarumit pruṭistant i-d-yettwaxlaqen g Tazzwara n lqern 20.
+== Imenzayen imrawen igejdanen ==
 
-Agraw agraɣlan ines yettwaxlaq di Los Angeles segmi 1967. Bɣan ad neccren taflest-nsen i akk medden.
+== Ẓeṛ daɣen ==
 
-[[Taggayt:Timetti]]
+[[Taggayt:imussuyen irummiyen imaynuten]]
+[[Taggayt:Igaren irummiyen]]
