*Empty MediaWiki Message*

--- a/Budwaw.mw
+++ b/Budwaw.mw
@@ -1,5 +1,5 @@
 {{Databox}}
-'''Budwaw''' d taɣiwant n ugezdu n [[Bumerdas]], tezga-d ar 35 km si Dzayer Tamanaɣt deg wegmuḍ (ccerq) d 11 km si [[Bumerdas]] ar utaram. Qqaran-as di lawan n Fransa daɣen ''Alma''
+'''Alma''' (seld n [[aserɣen|userɣen]]: '''Budwaw''') d [[taɣiwant]] n ugezdu n [[Bumerdas]], tezga-d ar 35 km si Dzayer Tamanaɣt deg wegmuḍ (ccerq) d 11 km si [[Bumerdas]] ar utaram. Qqaran-as di lawan n Fransa daɣen ''Alma''
 
 Ɣur-s deg 2008 azal n 71 238 imezdaɣ. 
 
