*Empty MediaWiki Message*

--- a/Imɣi_amseggas.mw
+++ b/Imɣi_amseggas.mw
@@ -1,4 +1,4 @@
-'''Imɣi n useggas''' d [[imɣan|imɣi]] yettidiren [[aseggas]] Kan am: [[irden|yirden]], [[Timẓin]], [[Tifest]], [[ikiker]], [[ibawen]], [[ukbal]]
+'''Imɣi amseggas''' d [[imɣan|imɣi]] yettidiren [[aseggas]] Kan am: [[irden|yirden]], [[Timẓin]], [[Tifest]], [[ikiker]], [[ibawen]], [[ukbal]]
 
 == Imɣan n useggas n Tegrest ==
 
