*Empty MediaWiki Message*

--- a/Megdiṭes.mw
+++ b/Megdiṭes.mw
@@ -13,3 +13,12 @@ S unect n usismel n [[Aswir amsaylal agraɣlan|uswir amsaylal agraɣlan]] (alqem
 * [[Megdiṭes imezdi]] — (''Caprimulgus europaeus'')
 * [[Megdiṭes amsulles]] — (''Caprimulgus fraenatus'') 
 * [[Megdiṭes n idurar]] — (''Caprimulgus poliocephalus'')
+
+== Asegdef ==
+
+== Ẓeṛ daɣen ==
+
+
+[[Taggayt:Igṭaṭ]]
+[[Taggayt:Tiwsitin n yigṭaṭ]]
+[[Taggayt:Megdiṭes]]
