*Empty MediaWiki Message*

--- a/Megdiṭes.mw
+++ b/Megdiṭes.mw
@@ -2,7 +2,7 @@
 '''Megdiṭes''' neɣ '''Meṭsazal''' ([[ Assaɣ ussnan]]: '''Caprimulgus''') d [[tawsit (tudersent)|tawsit]] n [[aylal|yigṭaṭ]] yeṭṭafaren [[tawacult (tasnudert)|tawacult]] n [[Amegdiṭes (tawacult)|imegdeṭṭas]] 
 
 ===[[Tasnettit]]===
-Aẓaṛ n yisem n ugṭiṭ d win yeqqnen ar [[iṭes|yiṭes]] acku igmamen n tewsit-a d wid yegganen s tuget ama deg [[id|yiṭ]] neɣ deg wazal
+Aẓaṛ n yisem n ugṭiṭ d win yeqqnen ar [[iṭes|yiṭes]] acku igmamen n tewsit-a d wid yegganen s tuget ama deg [[iṭ|yiṭ]] neɣ deg wazal
 
 == [[Tasensartut]] d wesru ==
 
