--- a/Timesferranin.mw
+++ b/Timesferranin.mw
@@ -2,5 +2,6 @@
 '''Timessferranin''' ([[assaɣ usnan]]: ''Lamiales'') d [[tafesna]] [[imɣan|tamɣawt]] yeṭṭafaren [[asmil (tasnudert)|asmil]] n [[tasnayyawin]] deg [[agzam (tasnudert)|wegzam]] n [[Timesdurifsan|tmesdurifsan]], Deg tfesna ayyi llan-t 11000 n [[talmest|telmas]] n [[imɣan|yemɣan]] zzunin-t (twafraqen-t) ɣef 21 n [[tawacult (tasnudert)|twaculin]] 
 
 == Tiwaculin ==
+* [[Tifadin]] — ('''Orobanchaceae''')
 
 == [[Tawsit (tudersent)|Tiwsitin]] ==
