*Empty MediaWiki Message*

--- a/Timesferranin.mw
+++ b/Timesferranin.mw
@@ -5,3 +5,8 @@
 * [[Tifadin]] — ('''Orobanchaceae''')
 
 == [[Tawsit (tudersent)|Tiwsitin]] ==
+* [[Ifadden n tmurt]] 
+
+== Ẓeṛ daɣen ==
+
+[[Taggayt:tifesniwin timƔawin]]
