--- a/Ifadden_n_tmurt.mw
+++ b/Ifadden_n_tmurt.mw
@@ -13,4 +13,4 @@ Zik-nni, ifadden n tmurt yettumeggez seg [[imɣi asnajyan]] yettwasxedmen s tuge
 [[Taggayt:Tiwsitin n yimɣan]]
 [[Taggayt:Imɣan ijenṭaden]]
 [[Taggayt:Tifadin]]
-[[Taggayt:Timessferranin]]
+[[Taggayt:Tiwsitin n tmesferranin]]
