--- a/Ifadden_n_tmurt.mw
+++ b/Ifadden_n_tmurt.mw
@@ -3,9 +3,17 @@
 
 Ifadden n tmurt d tawsit ilan (yesɛan) aṭas n [[talmest|telmas]] amur ameqran deg-sent d [[imɣi imezgi|timezgiyin]] yerna d tijenṭadin s talɣa tanezzucalt adɣa ɣef imendiyen (imɣan n tfellaḥt) 
 
-== Ifadden n tmurt deg tesnujya ==
-Zik-nni, ifadden n tmurt yettumeggez seg [[imɣi asnajyan]] yettwasxedmen s tuget i wsuji n kra n waṭṭanen ama s agensu (daxel) neɣ s azɣar (beṛṛa) n [[tafekka|tafekka]] maca deg wakud-a yuɣal yettwattu ur yettwasexdem ara 
+== Aglam ==
+Ifadden n tmurt d imɣan [[imɣi asaɣur|isaɣuren]] tiddi-nsen meẓẓey-it seg 10 ar 60 cm s unect n telmest 
 
+== Tilmas ==
+S unect n [[Ammas aɣelnaw i yisalan n teknusnudert|NCBI]] (18 yulyu 2010): 
+
+* [[Tifad meẓẓiyen]] — (''Orobanche minor sl'')
+
+
+== Ifadden n tmurt deg tesnujya ==
+Zik-nni, ifadden n tmurt yettumeggez seg [[imɣi asnajyan]] yettwasxedmen s tuget i wsuji n kra n waṭṭanen ama s agensu (daxel) neɣ s azɣar (beṛṛa) n [[tafekka|tafekka]] maca deg wakud-a yuɣal yettwattu ur yettwasexdem ara
 
 == Ẓeṛ daɣen ==
 
