--- a/Aceffar.mw
+++ b/Aceffar.mw
@@ -13,6 +13,7 @@ Aṭas n [[talmest|telmas]] yeṭṭafaren tawsit-a tt-waglament ya. Aẓaṛ n 
 == Ẓeṛ daɣen == 
 
 [[Taggayt:Imɣan]]
+[[Taggayt:Tizikemt]]
 [[Taggayt:Tiwsitin n yimɣan]]
 [[Taggayt:Tiwsitin n tzikemt]]
 [[Taggayt:Aceffaṛ]]
