--- a/Ifadden_n_tmurt.mw
+++ b/Ifadden_n_tmurt.mw
@@ -13,4 +13,19 @@ Zik-nni, ifadden n tmurt yettumeggez seg [[imɣi asnajyan]] yettwasxedmen s tuge
 [[Taggayt:Tiwsitin n yimɣan]]
 [[Taggayt:Imɣan ijenṭaden]]
 [[Taggayt:Tifadin]]
-[[Taggayt:Tiwsitin n tmesferranin]]
+[[Taggayt:Timessferranin]]
+
+== Tilmas ==
+
+[[Tugna:Ifadden n tmurt Phelipanche sp .jpg|thumb|Phelipanche sp - Ifadden n tmurt<ref>‘Petite botanique kabyle’ - Jean Marie Dallet - Fichier de documentation berbère - Fort National, réédition 1963</ref>]]
+
+== Ismawen ==
+*Isem-is s latinit: Phelipanche sp
+*Isem-is s tefransist: Orobanche
+*Ismawen-is nniḍen s teqbaylit: Ṛadim<ref>‘Étude botanique sur la Kabylie du Jurjura, avec catalogue’ - Aristide Letourneux - Imprimerie Nationale Française, Paris 1870</ref>
+*Ismawen-is nniḍen s tmaziɣt: 
+
+== Isseqdac ==
+
+<references />
+[[Taggayt:Imɣan]]
