*Empty MediaWiki Message*

--- a/Tatrawt.mw
+++ b/Tatrawt.mw
@@ -8,6 +8,7 @@ Imɣan yettwassnen yakk deg twacult-a gan d [[mager Iṭij|Magriṭṭij]] d [[t
 == Asismel ==
 
 == Tiwsitin-is ==
+* [[Tawelman]] — (''Scorzonera'')
 
 == Ẓeṛ daɣen ==
 
