*Empty MediaWiki Message*

--- a/Tawelman.mw
+++ b/Tawelman.mw
@@ -1,7 +1,11 @@
 {{automatic taxobox}}
-{{Datastub}}
+Tawelman ([[Assaɣ ussnan]]: '''Scorzonera''') d [[tawsit (tudersent)|tawsit]] n [[imɣan|yimɣan]] [[imɣi asaɣur|isaɣuren]] yeṭṭafaren [[tawacult (tasnudert)|tawacult]] n [[titrit|tetriyyin]] 
+
+
+
 [[Tugna:Scorzonera hispanica 001.JPG|thumb|''Scorzonera hispanica''  - [[Tawelman taspenyult]]]]
 [[Tugna:Scorzonera hispanica 002.JPG|thumb|]]
+
 == Ismawen ==
 *Isem-is s latinit: Scorzonera hispanica
 *Isem-is s tefransist: La scorsonère d'Espagne
