*Empty MediaWiki Message*

--- a/Tawelman.mw
+++ b/Tawelman.mw
@@ -1,7 +1,13 @@
 {{automatic taxobox}}
-Tawelman ([[Assaɣ ussnan]]: '''Scorzonera''') d [[tawsit (tudersent)|tawsit]] n [[imɣan|yimɣan]] [[imɣi asaɣur|isaɣuren]] yeṭṭafaren [[tawacult (tasnudert)|tawacult]] n [[titrit|tetriyyin]] 
+Tawelman ([[Assaɣ ussnan]]: '''Scorzonera''') d [[tawsit (tudersent)|tawsit]] n [[imɣan|yimɣan]] [[imɣi asaɣur|isaɣuren]] yeṭṭafaren [[tawacult (tasnudert)|tawacult]] n [[titrit|tetriyyin]]. [[Talmest]] yettwassnen yakk deg tawsit-a tga d [[tawelman taspenyult]] 
 
 
+== Aglam ==
+
+== Umuɣ n telmas ==
+
+
+== Tiwlafin n telmas== 
 
 [[Tugna:Scorzonera hispanica 001.JPG|thumb|''Scorzonera hispanica''  - [[Tawelman taspenyult]]]]
 [[Tugna:Scorzonera hispanica 002.JPG|thumb|]]
