*Empty MediaWiki Message*

--- a/Tawelman.mw
+++ b/Tawelman.mw
@@ -1,6 +1,5 @@
 {{automatic taxobox}}
-Tawelman ([[Assaɣ ussnan]]: '''Scorzonera''') d [[tawsit (tudersent)|tawsit]] n [[imɣan|yimɣan]] [[imɣi asaɣur|isaɣuren]] yeṭṭafaren [[tawacult (tasnudert)|tawacult]] n [[titrit|tetriyyin]]. [[Talmest]] yettwassnen yakk deg tawsit-a tga d [[tawelman taspenyult]] 
-
+'''Tawelman''' neɣ '''Tulma''' ([[Assaɣ ussnan]]: '''Scorzonera''') d [[tawsit (tudersent)|tawsit]] n [[imɣan|yimɣan]] [[imɣi asaɣur|isaɣuren]] yeṭṭafaren [[tawacult (tasnudert)|tawacult]] n [[titrit|tetriyyin]]. [[Talmest]] yettwassnen yakk deg tawsit-a tga d [[tawelman taspenyult]]
 
 == Aglam ==
 
