--- a/Tawelman.mw
+++ b/Tawelman.mw
@@ -16,3 +16,6 @@
 == Tiwelhiwin ==
 {{refs}}
 [[Taggayt:Imɣan]]
+[[Taggayt:Tiwsitin n twacult n [[Taggayt:tetriyyin]]
+[[Taggayt:Titrit]]
+[[Taggayt:Tiwsitin n yimɣan]]
