--- a/Tawelman.mw
+++ b/Tawelman.mw
@@ -16,6 +16,6 @@
 == Tiwelhiwin ==
 {{refs}}
 [[Taggayt:Imɣan]]
-[[Taggayt:Tiwsitin n twacult n [[Taggayt:tetriyyin]]
+[[Taggayt:Tiwsitin n twacult n tetriyyin]]
 [[Taggayt:Titrit]]
 [[Taggayt:Tiwsitin n yimɣan]]
