--- a/Tatrawt.mw
+++ b/Tatrawt.mw
@@ -9,6 +9,8 @@ Imɣan yettwassnen yakk deg twacult-a gan d [[mager Iṭij|Magriṭṭij]] d [[t
 
 == Tiwsitin-is ==
 * [[Tawelman]] — (''Scorzonera'')
+* [[Addad (imɣi)|Addad]] neɣ [[Addad (imɣi|Akicaw]] — (''Carlina'') 
+*
 
 == Ẓeṛ daɣen ==
 
