*Empty MediaWiki Message*

--- a/Tatrawt.mw
+++ b/Tatrawt.mw
@@ -9,7 +9,7 @@ Imɣan yettwassnen yakk deg twacult-a gan d [[mager Iṭij|Magriṭṭij]] d [[t
 
 == Tiwsitin-is ==
 * [[Tawelman]] — (''Scorzonera'')
-* [[Addad (imɣi)|Addad]] neɣ [[Addad (imɣi|Akicaw]] — (''Carlina'') 
+* [[Addad (imɣi)|Addad]] neɣ [[Addad (imɣi)|Akicaw]] — (''Carlina'') 
 *
 
 == Ẓeṛ daɣen ==
