*Empty MediaWiki Message*

--- a/Addad_(imɣi).mw
+++ b/Addad_(imɣi).mw
@@ -18,4 +18,5 @@
 
 [[Taggayt:Imɣan]]
 [[Taggayt:Tiwsitin n twacult n tetrawin]]
-[[Tiwsitin n yimɣan]]
+[[Taggayt:Tiwsitin n yimɣan]]
+[[Taggayt:tatrawt]]
