*Empty MediaWiki Message*

--- a/Acikaw_(tawsit).mw
+++ b/Acikaw_(tawsit).mw
@@ -15,3 +15,5 @@ Asegrew n tewsit-a yennulfa-d i tikkelt tamezwart aseggas n [[1794]] sɣur [[ame
 [[Taggayt:Tiwsitin n yimɣan]]
 [[Taggayt:Titriyyin]]
 [[Taggayt:Imɣan isaɣuren]]
+[[Taggayt:Tiwsitin n twacult n tetrawin]]
+[[Taggayt:tatrawt]]
