--- a/Tatrawt.mw
+++ b/Tatrawt.mw
@@ -8,9 +8,9 @@ Imɣan yettwassnen yakk deg twacult-a gan d [[mager Iṭij|Magriṭṭij]] d [[t
 == Asismel ==
 
 == Tiwsitin-is ==
-* [[Tawelman]] — (''Scorzonera'')
-* [[Addad (imɣi)|Addad]] neɣ [[Addad (imɣi)|Akicaw]] — (''Carlina'') 
-*
+* [[Tawelman]] — ([[Assaɣ ussnan|a.u]]: '''Scorzonera''')
+* [[Addad (imɣi)|Addad]] neɣ [[Addad (imɣi)|Akicaw]] — ([[Assaɣ ussnan|a.u]]: '''Carlina''') 
+* [[Acikaw (tawsit)|Acikaw]] — ([[Assaɣ ussnan|a.u]]: '''Galactites''')
 
 == Ẓeṛ daɣen ==
 
