--- a/Wamlal.mw
+++ b/Wamlal.mw
@@ -22,5 +22,5 @@ Tilmas yettwaddgen deg tewsit n wamlal alammi d yunyu [[2012]] gant d:
 
 [[Taggayt:Imɣan]]
 [[Taggayt:Tiwsitin n yimɣan]]
-[[Taggayt:Tiwsitin n twacult n tetrawt]]
+[[Taggayt:Tiwsitin n twacult n tetrawin]]
 [[Taggayt:Imɣan isaɣuren]]
