--- a/Tatrawt.mw
+++ b/Tatrawt.mw
@@ -11,7 +11,7 @@ Imɣan yettwassnen yakk deg twacult-a gan d [[mager Iṭij|Magriṭṭij]] d [[t
 * [[Tawelman]] — ([[Assaɣ ussnan|a.u]]: '''Scorzonera''')
 * [[Addad (imɣi)|Addad]] neɣ [[Addad (imɣi)|Akicaw]] — ([[Assaɣ ussnan|a.u]]: '''Carlina''') 
 * [[Acikaw (tawsit)|Acikaw]] — ([[Assaɣ ussnan|a.u]]: '''Galactites''')
-* [[Wamlal]] [[Assaɣ ussnan|a.u]]: '''Glebionis''')
+* [[Wamlal]] — ([[Assaɣ ussnan|a.u]]: '''Glebionis''')
 
 == Ẓeṛ daɣen ==
 
