*Empty MediaWiki Message*

--- a/Tamafart.mw
+++ b/Tamafart.mw
@@ -1,4 +1,6 @@
 {{Automatic taxobox}}
-'''Tamafart''' ([[isem usnan]]: ''Lactuca sativa''), (Tettwassen s: ''cclada''/ ''sslaṭa'') d [[talmest]] n [[imɣan|yemɣan]] yeṭṭafaren [[Tamafart (tawsit)|tawsit n tmafart]], tamafart d [[izegza|azegza]] yettwaččayen s [[ifer n yemɣi|iferran]]-is
+'''Tamafart''' ([[isem usnan]]: ''Lactuca sativa''), (Tettwassen s: ''cclada''/ ''sslaṭa'') d [[talmest]] n [[imɣan|yemɣan]] yeṭṭafaren [[tawsit (tudersent)|tawsit]] n [[Tamafart (tawsit)|tmafart]], tamafart d [[izegza|azegza]] yettwaččayen s [[iferr|iferran]]-is
+
+
 
 [[Category:Imɣan]]
