--- a/Tamafart.mw
+++ b/Tamafart.mw
@@ -1,5 +1,5 @@
 {{Automatic taxobox}}
-'''Tamafart''' ([[isem usnan]]: ''Lactuca sativa''), (Tettwassen s: ''cclada''/ ''sslaṭa'') d [[talmest]] n [[imɣan|yemɣan]] yeṭṭafaren [[tawsit (tudersent)|tawsit]] n [[Tamafart (tawsit)|tmafart]], tamafart d [[izegza|azegza]] yettwaččayen s [[iferr|iferran]]-is
+'''Tamafart''' ([[Assaɣ ussnan]]: '''Lactuca sativa'''), (Tettwassen s: ''cclada'' neɣ ''sslaṭa'') d [[talmest]] n [[imɣan|yemɣan]] yeṭṭafaren [[tawsit (tudersent)|tawsit]] n [[Tamafart (tawsit)|tmafart]], tamafart d [[izegza|azegza]] yettwaččayen s [[iferr|iferran]]-is
 
 
 
