*Empty MediaWiki Message*

--- a/Tamafart.mw
+++ b/Tamafart.mw
@@ -1,6 +1,19 @@
 {{Automatic taxobox}}
 '''Tamafart''' ([[Assaɣ ussnan]]: '''Lactuca sativa'''), (Tettwassen s: ''cclada'' neɣ ''sslaṭa'') d [[talmest]] n [[imɣan|yemɣan]] yeṭṭafaren [[tawsit (tudersent)|tawsit]] n [[Tamafart (tawsit)|tmafart]], tamafart d [[izegza|azegza]] yettwaččayen s [[iferr|iferran]]-is
 
+== Aglam ==
 
+== Tamafart i wučči ==
+
+== Tidefrin n tmafart ==
+
+== Asexdem d iseqdac ==
+
+== Tiwlafin ==
+
+== Amezruy ==
+
+== Ẓeṛ daɣen ==
 
 [[Category:Imɣan]]
+[[Taggayt:izegza]]
