*Empty MediaWiki Message*

--- a/Tatrawt.mw
+++ b/Tatrawt.mw
@@ -12,6 +12,7 @@ Imɣan yettwassnen yakk deg twacult-a gan d [[mager Iṭij|Magriṭṭij]] d [[t
 * [[Addad (imɣi)|Addad]] neɣ [[Addad (imɣi)|Akicaw]] — ([[Assaɣ ussnan|a.u]]: '''Carlina''') 
 * [[Acikaw (tawsit)|Acikaw]] — ([[Assaɣ ussnan|a.u]]: '''Galactites''')
 * [[Wamlal]] — ([[Assaɣ ussnan|a.u]]: '''Glebionis''')
+* [[Tamafart (tawsit)|Tamafart]] — ([[Assaɣ ussnan|a.u]]: '''Lactuca''')
 
 == Ẓeṛ daɣen ==
 
