*Empty MediaWiki Message*

--- a/Tatrawt.mw
+++ b/Tatrawt.mw
@@ -13,6 +13,9 @@ Imɣan yettwassnen yakk deg twacult-a gan d [[mager Iṭij|Magriṭṭij]] d [[t
 * [[Acikaw (tawsit)|Acikaw]] — ([[Assaɣ ussnan|a.u]]: '''Galactites''')
 * [[Wamlal]] — ([[Assaɣ ussnan|a.u]]: '''Glebionis''')
 * [[Tamafart (tawsit)|Tamafart]] — ([[Assaɣ ussnan|a.u]]: '''Lactuca''')
+* [[Arjagnu]] neɣ [[Aqlilu]] — ([[Assaɣ ussnan|a.u]]: '''Centaurea''') 
+* [[Ilidu]] neɣ [[Ilidu|Acbartu]] — ([[Assaɣ ussnan|a.u]]: '''Erigeron''') 
+* [[Tasdella]] neɣ [[Tasdella|Amsekli]] — ([[Assaɣ ussnan|a.u]]: '''Echinacea''')
 
 == Ẓeṛ daɣen ==
 
