*Empty MediaWiki Message*

--- a/Tatrawt.mw
+++ b/Tatrawt.mw
@@ -16,6 +16,8 @@ Imɣan yettwassnen yakk deg twacult-a gan d [[mager Iṭij|Magriṭṭij]] d [[t
 * [[Arjagnu]] neɣ [[Aqlilu]] — ([[Assaɣ ussnan|a.u]]: '''Centaurea''') 
 * [[Ilidu]] neɣ [[Ilidu|Acbartu]] — ([[Assaɣ ussnan|a.u]]: '''Erigeron''') 
 * [[Tasdella]] neɣ [[Tasdella|Amsekli]] — ([[Assaɣ ussnan|a.u]]: '''Echinacea''')
+* [[Taɣeddiwt]] — ([[Assaɣ ussnan|a.u]]: '''Cirsium''')
+* [[Aderyun]] neɣ [[Aderyun|Taysa]] neɣ [[Aderyun|Buzduz]] — ([[Assaɣ ussnan|a.u]]: '''Chrysanthemum''')
 
 == Ẓeṛ daɣen ==
 
