*Empty MediaWiki Message*

--- a/Taɣeddiwt.mw
+++ b/Taɣeddiwt.mw
@@ -22,4 +22,5 @@ Imɣan-a d wid id yettemɣayen deg [[Turuft|Uruppa]] d [[Asya]] d [[Ameɣreb ase
 
 [[Taggayt:Imɣan]]
 [[Taggayt:Tiwsitin n yimɣan]]
-[[Taggayt:Titriyyin]]
+[[Taggayt: Tiwsitin n twacult n tetrawin]]
+[[Taggayt:Tatrawt]]
